<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="albums_name">Albums</string>
    <string name="artist_name">Artists</string>
    <string name="music_store_name">Music Store</string>
    <string name="settings_name">Settings</string>
    <string name="now_playing">Now playing</string>
    <string name="albums">Albums</string>
    <string name="artist">Artist</string>
    <string name="music_store">Music Store</string>
    <string name="settings">Settings</string>


    <string name="awolnation_band">Awolnation</string>
    <string name="abney_park_band">Abney Park</string>
    <string name="lost_horizons_album">Lost Horizons</string>
    <string name="run_album">Run</string>
    <string name="now_playing_screen_descriptions">Here is the main screen for listening to songs.</string>
    <string name="register_message">Register function hasn\'t been implemented yet</string>
    <string name="login_message">Login function hasn\'t been implemented yet</string>
    <string name="albums_screen_description">Here is an album list screen. You can add an album to the playlist (the \'Add to playlist\' button, the \'Play list\' screen should be implemented) or play the selected album by clicking on the \'Play\' button.</string>
    <string name="example_artist">EXAMPLE</string>
    <string name="about_example_artist">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dictum justo at feugiat. Cras finibus et arcu pharetra pretium. Proin ultrices nunc vel commodo aliquet. Maecenas dignissim vulputate.</string>
    <string name="read_more_button_name">Read more</string>
    <string name="david_guetta_artist">DAVID GUETTA</string>
    <string name="about_david_guetta_artist">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dictum justo at feugiat. Cras finibus et arcu pharetra pretium. Proin ultrices nunc vel commodo aliquet. Maecenas dignissim vulputate.</string>
    <string name="pitbull_artist">PITBULL</string>
    <string name="about_pitbull_artist">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dictum justo at feugiat. Cras finibus et arcu pharetra pretium. Proin ultrices nunc vel commodo aliquet. Maecenas dignissim vulputate.</string>
    <string name="dj_tiesto_artist">DJ TIESTO</string>
    <string name="about_dj_tiesto_artist">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dictum justo at feugiat. Cras finibus et arcu pharetra pretium. Proin ultrices nunc vel commodo aliquet. Maecenas dignissim vulputate.</string>
    <string name="artist_screen_description">Click on \'Read more\' and then you will be move to resources available on the web.</string>
    <string name="example_band">Example</string>
    <string name="wont_go_quietly_album_name">Won\'t Go Quietly</string>
    <string name="tiesto_band">TIESTO</string>
    <string name="say_something_album_name">Say Something</string>
    <string name="music_store_description_screen"> PAYMENT ACTIVITY \n\nThis is a music store, you can search for albums, read album information by pressing the \'info\' button, and you can also buy an album by pressing the \'basket\' button.</string>
    <string name="e_mail_login_spotify_settings">E-mail / Login</string>
    <string name="password_spotify_settings">Password</string>
    <string name="register_spotify_button_name">Register</string>
    <string name="login_spotify_button_name">Login</string>
    <string name="settings_screen_description">The player will work on the integration with Spotify API by using Spotify Android SDK. The Spotify Android SDK makes it easy to add Spotify functionality to your Android app. The SDK contains two small footprint binary libraries packaged as Android archives (AAR): Spotify Authentication Library and Spotify Player Library. You will be able to sign in or create an account from within the app. An additional option would be logging in via a Facebook and Google account anddddby using spotify premium you can listen to any music with many additional facility</string>
    <string name="login_via_facebook_settings_button_name">Login via Facebook</string>
    <string name="login_via_google_settings_button_name">Login via Google</string>
    <string name="current_song_name">Steam Powered Giraffe - Brass Goggles</string>
    <string name="start_time_of_song">0:00</string>
    <string name="end_time_of_song">4:12</string>
    <string name="repeat_nowPlaying_class">Song will be repeated once playback of all songs complete</string>
    <string name="shuffle_is_enabelled">Shuffle has been enabled</string>
    <string name="next_song">Playing the next song</string>
    <string name="previous_song">Playing precious song</string>
    <string name="playing_song">Playing song</string>
    <string name="Album_is_added_to_playlist">Album is added to playlist</string>
    <string name="intent_missing">Function not implemented. Intent is missing to open the browser</string>
    <string name="Info_of_album_one">Info of album one</string>
    <string name="Info_of_album_two">Info of album two</string>
    <string name="Info_of_album_three">Info of album three</string>
    <string name="Info_of_album_four">Info of album four</string>
    <string name="Added_to_Shopping_Cart">Added to Shopping Cart</string>
    <string name="thanks_for_buying">Thanks you for buying this song, please enjoy</string>
    <string name="main_activity_description">This is the MAIN ACTIVITY of the app. You can listen to the music, access spotify store to purchase song, change the settings accordint to your convinence</string>
</resources>
